examples/good/07-02-functions-reference-incr.dog
void fun(int& a) {
    a++;
    return;
}

int a = 5;
yeet(a); // 5
fun(a);
yeet(a); // 6