examples/bad/04-01-print-fun.dog
void fun() {
    return;
}

yeet fun;